# Quarter-3-Agentic-AI-

Coordinated-Multi-Agent-System/: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
Gemini-Chatbot-with-Chainlit/: .gitignore  README.md  chatbot.py  pyproject.toml
Gemini-Chatbot-with-Chainlit/src/gemini_chatbot_with_chainlit/: __init__.py
agent-stream-runner/: .env  .gitignore  agent_stream_runner.py  pyproject.toml
agent-stream-runner/src/agent_with_tools/: __init__.py
openai_agent_practice/: .env  Guardrails.py  main.py  pyproject.toml  tools.py
python_practice/: callable.py  dataclass.py  generics.py
