[project]
name = "agent-with-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "AHZAZ AHMED", email = "ahzazahmed159@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "chainlit>=2.6.5",
    "openai-agents>=0.2.4",
    "python-dotenv>=1.1.1",
]

[project.scripts]
agent-with-tools = "agent_with_tools:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
